Wed Aug 31 01:56:55 2016  Yuichiro Kaneko  <yui-knk@ruby-lang.org>

	* doc/extension.ja.rdoc: [DOC] Fix a typo. [ci skip]

Wed Aug 31 00:52:23 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/extmk.rb: make the gems target directory under the expanded
	  name.  [ruby-core:77102] [Bug #12714]

Tue Aug 30 15:27:27 2016  Kouhei Yanagita  <yanagi@shakenbu.org>

	* ext/json/lib/json/add/ostruct.rb (OpenStruct.json_create):
	  Correct documentation, fix the name of values.  [Fix GH-1421]

Tue Aug 30 14:53:34 2016  NAKAMURA Usaku  <usa@ruby-lang.org>

	* io.c (nogvl_fsync, nogvl_fdatasync): on Windows, just ignore if the
	  fd is associated to non-disk device.  if call fsync and/or fdatasync
	  with such fds, it causes Errno::EBADF exception and the behavior is
	  incompatible with ruby 2.1 and earlier unintentionally introduced.

Tue Aug 30 03:38:35 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* vm_dump.c (backtrace): use rip in the saved context for the case
	  the SIGSEGV is received when the process is in userland.
	  Note that ip in the stack should be used if the signal is received
	  when it is in kernel (when it is calling syscall) [Bug #12711]

Sat Aug 27 10:26:14 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (rb_ary_concat_multi): take multiple arguments.  based
	  on the patch by Satoru Horie.  [Feature #12333]

	* string.c (rb_str_concat_multi, rb_str_prepend_multi): ditto.

Thu Aug 25 00:42:31 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/file.c (append_wstr): remove a codepage argument, and use
	  INVALID_CODE_PAGE for conversion by econv.

	* win32/file.c (append_wstr): exclude the terminator from the
	  result length when input len == -1.

Wed Aug 24 22:41:30 2016  Kouhei Sutou  <kou@cozmixng.org>

	* gc.c (gc_reset_malloc_info): Remove too much ";".

Wed Aug 24 20:07:57 2016  Naohisa Goto  <ngotogenome@gmail.com>

	* include/ruby/defines.h (ALWAYS_INLINE): Add alternative definition.